successful model training

--- a/create_datasets.ipynb
+++ b/create_datasets.ipynb
@@ -46,10 +46,10 @@
     "    lmm.prime()\n",
     "    \n",
     "    suffix = f\"_flat_5pct_curve_{hed_expiry_str}_{liab_expiry_str}\"\n",
-    "    lmm.generate_episodes_imm(n_episodes=50_000, min_stress_prob=0.0, max_stress_prob=0.0, out_dir=f'data/calm{suffix}')\n",
-    "    #lmm.generate_episodes_imm(n_episodes=50_000, min_stress_prob=1.0, max_stress_prob=1.0, out_dir=f'data/stress{suffix}')\n",
-    "    #lmm.generate_episodes_imm(n_episodes=45_000, min_stress_prob=0.0, max_stress_prob=0.8, out_dir=f'data/curriculum{suffix}') # only 20000, eval will be 50/50\n",
-    "    #lmm.generate_episodes_imm(n_episodes=5000,   min_stress_prob=0.5, max_stress_prob=0.5, out_dir=f'data/5050{suffix}')"
+    "    lmm.generate_episodes_imm(n_episodes=15_000, min_stress_prob=0.0, max_stress_prob=0.0, out_dir=f'data/calm{suffix}')\n",
+    "    lmm.generate_episodes_imm(n_episodes=15_000, min_stress_prob=1.0, max_stress_prob=1.0, out_dir=f'data/stress{suffix}')\n",
+    "    lmm.generate_episodes_imm(n_episodes=10_000, min_stress_prob=0.0, max_stress_prob=0.8, out_dir=f'data/curriculum{suffix}') # only 20000, eval will be 50/50\n",
+    "    lmm.generate_episodes_imm(n_episodes=5_000, min_stress_prob=0.5, max_stress_prob=0.5, out_dir=f'data/5050{suffix}')"
    ]
   },
   {
@@ -65,10 +65,47 @@
    "execution_count": null,
    "id": "aff43220",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "t_max set to 5.5\n",
+      "n_curves is none, setting n_curves to n_samples=1\n",
+      "random_curves set to False, using the first n_curves of the dataframe\n",
+      "creating df init for n_curves=1\n",
+      "done creating df_init\n",
+      "sampling\n",
+      "Creating combined covariance matrix...\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "Generating episode blocks:  78%|███████▊  | 39/50 [05:37<01:35,  8.65s/block]\n"
+     ]
+    },
+    {
+     "ename": "KeyboardInterrupt",
+     "evalue": "",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mKeyboardInterrupt\u001b[0m                         Traceback (most recent call last)",
+      "Cell \u001b[0;32mIn[2], line 1\u001b[0m\n\u001b[0;32m----> 1\u001b[0m \u001b[43mgenerate_datasets\u001b[49m\u001b[43m(\u001b[49m\u001b[38;5;241;43m0.5\u001b[39;49m\u001b[43m,\u001b[49m\u001b[38;5;241;43m1\u001b[39;49m\u001b[43m)\u001b[49m\n\u001b[1;32m      2\u001b[0m \u001b[38;5;66;03m#generate_datasets(2,1)\u001b[39;00m\n",
+      "Cell \u001b[0;32mIn[1], line 41\u001b[0m, in \u001b[0;36mgenerate_datasets\u001b[0;34m(hed_expiry, liab_expiry)\u001b[0m\n\u001b[1;32m     39\u001b[0m suffix \u001b[38;5;241m=\u001b[39m \u001b[38;5;124mf\u001b[39m\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124m_flat_5pct_curve_\u001b[39m\u001b[38;5;132;01m{\u001b[39;00mhed_expiry_str\u001b[38;5;132;01m}\u001b[39;00m\u001b[38;5;124m_\u001b[39m\u001b[38;5;132;01m{\u001b[39;00mliab_expiry_str\u001b[38;5;132;01m}\u001b[39;00m\u001b[38;5;124m\"\u001b[39m\n\u001b[1;32m     40\u001b[0m \u001b[38;5;66;03m#lmm.generate_episodes_imm(n_episodes=50_000, min_stress_prob=0.0, max_stress_prob=0.0, out_dir=f'data/calm{suffix}')\u001b[39;00m\n\u001b[0;32m---> 41\u001b[0m \u001b[43mlmm\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mgenerate_episodes_imm\u001b[49m\u001b[43m(\u001b[49m\u001b[43mn_episodes\u001b[49m\u001b[38;5;241;43m=\u001b[39;49m\u001b[38;5;241;43m50_000\u001b[39;49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43mmin_stress_prob\u001b[49m\u001b[38;5;241;43m=\u001b[39;49m\u001b[38;5;241;43m1.0\u001b[39;49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43mmax_stress_prob\u001b[49m\u001b[38;5;241;43m=\u001b[39;49m\u001b[38;5;241;43m1.0\u001b[39;49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43mout_dir\u001b[49m\u001b[38;5;241;43m=\u001b[39;49m\u001b[38;5;124;43mf\u001b[39;49m\u001b[38;5;124;43m'\u001b[39;49m\u001b[38;5;124;43mdata/stress\u001b[39;49m\u001b[38;5;132;43;01m{\u001b[39;49;00m\u001b[43msuffix\u001b[49m\u001b[38;5;132;43;01m}\u001b[39;49;00m\u001b[38;5;124;43m'\u001b[39;49m\u001b[43m)\u001b[49m\n\u001b[1;32m     42\u001b[0m lmm\u001b[38;5;241m.\u001b[39mgenerate_episodes_imm(n_episodes\u001b[38;5;241m=\u001b[39m\u001b[38;5;241m45_000\u001b[39m, min_stress_prob\u001b[38;5;241m=\u001b[39m\u001b[38;5;241m0.0\u001b[39m, max_stress_prob\u001b[38;5;241m=\u001b[39m\u001b[38;5;241m0.8\u001b[39m, out_dir\u001b[38;5;241m=\u001b[39m\u001b[38;5;124mf\u001b[39m\u001b[38;5;124m'\u001b[39m\u001b[38;5;124mdata/curriculum\u001b[39m\u001b[38;5;132;01m{\u001b[39;00msuffix\u001b[38;5;132;01m}\u001b[39;00m\u001b[38;5;124m'\u001b[39m) \u001b[38;5;66;03m# only 20000, eval will be 50/50\u001b[39;00m\n\u001b[1;32m     43\u001b[0m lmm\u001b[38;5;241m.\u001b[39mgenerate_episodes_imm(n_episodes\u001b[38;5;241m=\u001b[39m\u001b[38;5;241m5000\u001b[39m,   min_stress_prob\u001b[38;5;241m=\u001b[39m\u001b[38;5;241m0.5\u001b[39m, max_stress_prob\u001b[38;5;241m=\u001b[39m\u001b[38;5;241m0.5\u001b[39m, out_dir\u001b[38;5;241m=\u001b[39m\u001b[38;5;124mf\u001b[39m\u001b[38;5;124m'\u001b[39m\u001b[38;5;124mdata/5050\u001b[39m\u001b[38;5;132;01m{\u001b[39;00msuffix\u001b[38;5;132;01m}\u001b[39;00m\u001b[38;5;124m'\u001b[39m)\n",
+      "File \u001b[0;32m/home/hedge/gamma-vega-rl-hedging/environment/lmmsabr.py:2297\u001b[0m, in \u001b[0;36mLMMSABR.generate_episodes_imm\u001b[0;34m(self, n_episodes, poisson_rate, block, max_stress_prob, min_stress_prob, out_dir)\u001b[0m\n\u001b[1;32m   2295\u001b[0m \u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39msimulate(seed\u001b[38;5;241m=\u001b[39mep_idx)\n\u001b[1;32m   2296\u001b[0m \u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39mget_swap_matrix()\n\u001b[0;32m-> 2297\u001b[0m (h_sh, h_sw), (l_sh, l_sw) \u001b[38;5;241m=\u001b[39m \u001b[38;5;28;43mself\u001b[39;49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mget_sabr_params_imm\u001b[49m\u001b[43m(\u001b[49m\u001b[43m)\u001b[49m\n\u001b[1;32m   2299\u001b[0m reg_hed, _ \u001b[38;5;241m=\u001b[39m \u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39mcompute_regression_betas_imm()\n\u001b[1;32m   2300\u001b[0m reg_vol_hed, _ \u001b[38;5;241m=\u001b[39m \u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39mcompute_regression_betas_vol_imm()\n",
+      "File \u001b[0;32m/home/hedge/gamma-vega-rl-hedging/environment/lmmsabr.py:1698\u001b[0m, in \u001b[0;36mLMMSABR.get_sabr_params_imm\u001b[0;34m(self, hed_idx, liab_idx)\u001b[0m\n\u001b[1;32m   1695\u001b[0m     \u001b[38;5;28;01mreturn\u001b[39;00m np\u001b[38;5;241m.\u001b[39mstack([price, delta, gamma, vega, swaption_pnl, iv], axis\u001b[38;5;241m=\u001b[39m\u001b[38;5;241m-\u001b[39m\u001b[38;5;241m1\u001b[39m), np\u001b[38;5;241m.\u001b[39mstack([swap_value, swap_pnl, annuity_swap, swap_rate], axis\u001b[38;5;241m=\u001b[39m\u001b[38;5;241m-\u001b[39m\u001b[38;5;241m1\u001b[39m)\n\u001b[1;32m   1697\u001b[0m hedge_metrics \u001b[38;5;241m=\u001b[39m risk_metrics(swap_hedge_expiry_relative_idx)\n\u001b[0;32m-> 1698\u001b[0m liab_metrics \u001b[38;5;241m=\u001b[39m \u001b[43mrisk_metrics\u001b[49m\u001b[43m(\u001b[49m\u001b[43mswap_liab_expiry_relative_idx\u001b[49m\u001b[43m)\u001b[49m\n\u001b[1;32m   1699\u001b[0m \u001b[38;5;28;01mreturn\u001b[39;00m hedge_metrics, liab_metrics\n",
+      "File \u001b[0;32m/home/hedge/gamma-vega-rl-hedging/environment/lmmsabr.py:1681\u001b[0m, in \u001b[0;36mLMMSABR.get_sabr_params_imm.<locals>.risk_metrics\u001b[0;34m(offset)\u001b[0m\n\u001b[1;32m   1678\u001b[0m swap_sim_ofs \u001b[38;5;241m=\u001b[39m np\u001b[38;5;241m.\u001b[39mbroadcast_to(\u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39mswap_sim[:, [offset]],broadcast_tuple)\n\u001b[1;32m   1679\u001b[0m \u001b[38;5;66;03m#print(\"sigmas\")\u001b[39;00m\n\u001b[1;32m   1680\u001b[0m \u001b[38;5;66;03m#print(np.max(np.nan_to_num(sigma_ofs)), np.min(np.nan_to_num(sigma_ofs)))\u001b[39;00m\n\u001b[0;32m-> 1681\u001b[0m iv \u001b[38;5;241m=\u001b[39m \u001b[38;5;28;43mself\u001b[39;49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43msabr_implied_vol\u001b[49m\u001b[43m(\u001b[49m\u001b[43mF\u001b[49m\u001b[38;5;241;43m=\u001b[39;49m\u001b[43mswap_sim_ofs\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43mK\u001b[49m\u001b[38;5;241;43m=\u001b[39;49m\u001b[43matm_strikes\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43mT\u001b[49m\u001b[38;5;241;43m=\u001b[39;49m\u001b[43mttm_mat_ofs\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43malpha\u001b[49m\u001b[38;5;241;43m=\u001b[39;49m\u001b[43msigma_ofs\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43mbeta\u001b[49m\u001b[38;5;241;43m=\u001b[39;49m\u001b[38;5;28;43mself\u001b[39;49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mbeta\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43mrho\u001b[49m\u001b[38;5;241;43m=\u001b[39;49m\u001b[43mphi_ofs\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43mnu\u001b[49m\u001b[38;5;241;43m=\u001b[39;49m\u001b[43mV_ofs\u001b[49m\u001b[43m)\u001b[49m\n\u001b[1;32m   1682\u001b[0m \u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39miv \u001b[38;5;241m=\u001b[39m iv\n\u001b[1;32m   1683\u001b[0m price, delta, gamma, vega \u001b[38;5;241m=\u001b[39m \u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39mblack_swaption_price(F\u001b[38;5;241m=\u001b[39mswap_sim_ofs, K\u001b[38;5;241m=\u001b[39matm_strikes, T\u001b[38;5;241m=\u001b[39mttm_mat_ofs, sigma\u001b[38;5;241m=\u001b[39miv, annuity\u001b[38;5;241m=\u001b[39mannuity_ofs)\n",
+      "File \u001b[0;32m/home/hedge/gamma-vega-rl-hedging/environment/lmmsabr.py:1893\u001b[0m, in \u001b[0;36mLMMSABR.sabr_implied_vol\u001b[0;34m(self, F, K, T, alpha, beta, rho, nu, atol)\u001b[0m\n\u001b[1;32m   1889\u001b[0m \u001b[38;5;66;03m# off-ATM: safe division\u001b[39;00m\n\u001b[1;32m   1890\u001b[0m ratio[\u001b[38;5;241m~\u001b[39msmall] \u001b[38;5;241m=\u001b[39m z[\u001b[38;5;241m~\u001b[39msmall] \u001b[38;5;241m/\u001b[39m x_z[\u001b[38;5;241m~\u001b[39msmall]\n\u001b[1;32m   1892\u001b[0m A \u001b[38;5;241m=\u001b[39m alpha \u001b[38;5;241m/\u001b[39m FK_beta \u001b[38;5;241m/\u001b[39m (\n\u001b[0;32m-> 1893\u001b[0m         \u001b[38;5;241m1\u001b[39m \u001b[38;5;241m+\u001b[39m \u001b[43m(\u001b[49m\u001b[38;5;241;43m1\u001b[39;49m\u001b[43m \u001b[49m\u001b[38;5;241;43m-\u001b[39;49m\u001b[43m \u001b[49m\u001b[43mbeta\u001b[49m\u001b[43m)\u001b[49m\u001b[38;5;241;43m*\u001b[39;49m\u001b[38;5;241;43m*\u001b[39;49m\u001b[38;5;241;43m2\u001b[39;49m \u001b[38;5;241m*\u001b[39m log_FK\u001b[38;5;241m*\u001b[39m\u001b[38;5;241m*\u001b[39m\u001b[38;5;241m2\u001b[39m \u001b[38;5;241m/\u001b[39m \u001b[38;5;241m24\u001b[39m\n\u001b[1;32m   1894\u001b[0m         \u001b[38;5;241m+\u001b[39m (\u001b[38;5;241m1\u001b[39m \u001b[38;5;241m-\u001b[39m beta)\u001b[38;5;241m*\u001b[39m\u001b[38;5;241m*\u001b[39m\u001b[38;5;241m4\u001b[39m \u001b[38;5;241m*\u001b[39m log_FK\u001b[38;5;241m*\u001b[39m\u001b[38;5;241m*\u001b[39m\u001b[38;5;241m4\u001b[39m \u001b[38;5;241m/\u001b[39m \u001b[38;5;241m1920\u001b[39m\n\u001b[1;32m   1895\u001b[0m     )\n\u001b[1;32m   1897\u001b[0m B \u001b[38;5;241m=\u001b[39m \u001b[38;5;241m1\u001b[39m \u001b[38;5;241m+\u001b[39m (\n\u001b[1;32m   1898\u001b[0m         (\u001b[38;5;241m1\u001b[39m \u001b[38;5;241m-\u001b[39m beta)\u001b[38;5;241m*\u001b[39m\u001b[38;5;241m*\u001b[39m\u001b[38;5;241m2\u001b[39m \u001b[38;5;241m*\u001b[39m alpha\u001b[38;5;241m*\u001b[39m\u001b[38;5;241m*\u001b[39m\u001b[38;5;241m2\u001b[39m \u001b[38;5;241m/\u001b[39m (\u001b[38;5;241m24\u001b[39m \u001b[38;5;241m*\u001b[39m FK_beta\u001b[38;5;241m*\u001b[39m\u001b[38;5;241m*\u001b[39m\u001b[38;5;241m2\u001b[39m)\n\u001b[1;32m   1899\u001b[0m     \u001b[38;5;241m+\u001b[39m rho \u001b[38;5;241m*\u001b[39m beta \u001b[38;5;241m*\u001b[39m nu \u001b[38;5;241m*\u001b[39m alpha \u001b[38;5;241m/\u001b[39m (\u001b[38;5;241m4\u001b[39m \u001b[38;5;241m*\u001b[39m FK_beta)\n\u001b[1;32m   1900\u001b[0m     \u001b[38;5;241m+\u001b[39m (\u001b[38;5;241m2\u001b[39m \u001b[38;5;241m-\u001b[39m \u001b[38;5;241m3\u001b[39m\u001b[38;5;241m*\u001b[39mrho\u001b[38;5;241m*\u001b[39m\u001b[38;5;241m*\u001b[39m\u001b[38;5;241m2\u001b[39m) \u001b[38;5;241m*\u001b[39m nu\u001b[38;5;241m*\u001b[39m\u001b[38;5;241m*\u001b[39m\u001b[38;5;241m2\u001b[39m \u001b[38;5;241m/\u001b[39m \u001b[38;5;241m24\u001b[39m\n\u001b[1;32m   1901\u001b[0m     ) \u001b[38;5;241m*\u001b[39m T\n\u001b[1;32m   1903\u001b[0m sigma \u001b[38;5;241m=\u001b[39m A \u001b[38;5;241m*\u001b[39m ratio \u001b[38;5;241m*\u001b[39m B\n",
+      "\u001b[0;31mKeyboardInterrupt\u001b[0m: "
+     ]
+    }
+   ],
    "source": [
     "generate_datasets(0.5,1)\n",
-    "#generate_datasets(2,1)"
+    "generate_datasets(2,1)"
    ]
   },
   {
